# tangent

./: .clang-format  .gitignore  genbuild.sh
cmake/: CMakeLists.txt
res/: gui.qml  resources.qrc
src/: circle.h  line.h  native_to_qt.cpp  native_to_qt.h  point.h  tangent.cpp
